# ChangeLog for dev-db/metakit
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/metakit/ChangeLog,v 1.42 2007/05/15 09:29:19 bangert Exp $

  15 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
  add <herd>no-herd</herd>

  20 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  metakit-2.4.9.6.ebuild:
  Stable on sparc wrt #169509

  10 Apr 2007; Christian Faulhammer <opfer@gentoo.org>
  metakit-2.4.9.6.ebuild:
  stable amd64, bug 169509

  09 Apr 2007; Raúl Porcel <armin76@gentoo.org> metakit-2.4.9.6.ebuild:
  ia64 stable wrt bug 169509

  06 Apr 2007; Christian Faulhammer <opfer@gentoo.org>
  metakit-2.4.9.6.ebuild:
  stable x86, bug 169509

  06 Apr 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  metakit-2.4.9.6.ebuild:
  ppc stable, bug #169509

*metakit-2.4.9.6 (05 Mar 2007)

  05 Mar 2007; Anant Narayanan <anant@gentoo.org> +metakit-2.4.9.6.ebuild:
  vBump to 2.4.9.6, closes bug #133317

  06 Jan 2007; Danny van Dyk <kugelfang@gentoo.org>
  -metakit-2.4.7.37.ebuild, -metakit-2.4.9.2-r1.ebuild:
  QA: Removed unused versions.

  28 Nov 2006; Christian Faulhammer <opfer@gentoo.org>
  metakit-2.4.7.37.ebuild, metakit-2.4.9.2-r1.ebuild,
  metakit-2.4.9.3-r2.ebuild:
  moved tcltk USE flag over to separate tk and tcl flags, see bug #17808

  07 Oct 2006; Simon Stelling <blubb@gentoo.org>
  +files/metakit-2.4.9.3-64bit.patch, metakit-2.4.9.3-r2.ebuild:
  64bit compilation fixes; bug 133872; thanks to Denis Gubanov for the initial
  patch

  13 Jul 2006; Aron Griffis <agriffis@gentoo.org> metakit-2.4.9.3-r2.ebuild:
  Mark 2.4.9.3-r2 stable on ia64

  01 Apr 2006; Aron Griffis <agriffis@gentoo.org> metakit-2.4.9.3-r2.ebuild:
  Mark 2.4.9.3-r2 ~ia64

  17 Jun 2005; Bryan Østergaard <kloeri@gentoo.org>
  metakit-2.4.7.37.ebuild, metakit-2.4.9.2-r1.ebuild,
  metakit-2.4.9.3-r2.ebuild:
  Clean up LICENSE, bug 96173.

  24 Apr 2005; Michael Hanselmann <hansmi@gentoo.org>
  metakit-2.4.9.3-r2.ebuild: