@@ -1,0 +1,3 @@
+MD5 17330257376eea657827ed632ea62c9e metakit-2.4.9.7.tar.gz 868310
+RMD160 e563c2187e66ed7a8ea0e9a16971e6ce777e3088 metakit-2.4.9.7.tar.gz 868310
+SHA256 d1ba361d2d8517925cff5c23e8602822da9c8c347a75a15c225ec656ff7ca94d metakit-2.4.9.7.tar.gz 868310
